<resources>
    <string name="app_name">Tripget</string>
    <string name="not_sign_in">Can\'t sign in with Google</string>
    <string name="title_activity_main_menu">Tripget</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="not_log_out">Can\'t log out</string>
    <string name="not_close_session">Can\'t close session</string>
    <string name="log_out">"Log Out"</string>
    <string name="revoke">"Revoke"</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="saved_trips">Saved trips</string>
    <string name="my_trips">My trips</string>
    <string name="next_trip">Best Budget</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Fragment Search</string>
    <string name="trip_date">Trip date</string>
    <string name="destination">Destination</string>
    <string name="budget_for">Budget for:</string>
    <string name="trip_title">Trip title</string>
    <string name="not_auth_firebase">Can\'t Auth with Firebase</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="story_saved">Your story has been saved</string>
    <string name="write_and_inspire">Write and inspire</string>


    <string name="google_key">AIzaSyBP0xuD0U-4wP2mhT9Nm87KUyI0VdhyYrs</string>
    <string name="welcome_tripget">Welcome to Tripget</string>
    <string name="about_us">About us</string>
    <string name="string_about_us">Tripget is a travel recommendation system based on user reviews. Its main characteristic is that the search is based on a budget given by the user, and the results are generated according to reviews adhering to that criterion</string>
    <string name="went_wrong">Something went wrong, try again</string>
    <string name="search_by">Search by destination, budget or both</string>
    <string name="search_find">Search your next trip budget</string>
    <string name="no_trips">No trips available</string>
    <string name="likes">likes</string>
    <string name="delete">Sucess delete</string>
    <string name="liked">Liked</string>
    <string name="like_one">Like</string>
    <string name="budget">$Budget</string>
    <string name="welcome">Welcome to Tripget</string>
    <string name="choose_destination">First choose destination</string>
    <string name="user_action_noti">liked your trip</string>
    <string name="no_notifications">No notifications</string>
</resources>
