<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/next_trip" />
        <item
            android:id="@+id/nav_new_story"
            android:icon="@drawable/ic_edit"
            android:title="@string/write_and_inspire" />
        <item
            android:id="@+id/nav_my_trips"
            android:icon="@drawable/ic_library_books"
            android:title="@string/my_trips" />
        <item
            android:id="@+id/nav_inspiration"
            android:icon="@drawable/ic_collections_bookmark_black_24dp"
            android:title="@string/inspiration" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_notification"
                android:icon="@drawable/ic_favorite"
                android:title="@string/notifications" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
